inputmethod: Also open the inputm method panel with a pen

BUG: 449888


(cherry picked from commit ad0a35882ef90876caf49f323bfb0791acf20a17)