src/input.cpp
@@ -2301,6 +2301,16 @@ void InputRedirection::setupWorkspace()
     }
 }
 
+QObject *InputRedirection::lastInputHandler() const
+{
+    return m_lastInputDevice;
+}
+
+void InputRedirection::setLastInputHandler(QObject *device)
+{
+    m_lastInputDevice = device;
+}
+
 class UserActivitySpy : public InputEventSpy
 {
 public:
@@ -3003,11 +3013,6 @@ Toplevel *InputDeviceHandler::focus() const
 Decoration::DecoratedClientImpl *InputDeviceHandler::decoration() const
 {
     return m_focus.decoration;
-}
-
-uint32_t InputDeviceHandler::lastEventTime() const
-{
-    return m_lastEventTime;
 }
 
 } // namespace
